# giskard_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: boxy_controllables.yaml  boxy_controller_action_server.yaml  boxy_controller_action_test.yaml  boxy_interactive_markers.yaml  boxy_internals.yaml  boxy_upper_body.yaml  boxy_whole_body_controller.yaml  pr2_controllables.yaml  pr2_controller_action_server.yaml  pr2_controller_action_test.yaml  pr2_interactive.rviz  pr2_interactive_markers.yaml  pr2_internals.yaml  pr2_left_arm.yaml  pr2_left_arm_without_torso.yaml  pr2_left_upper_body.yaml  pr2_pouring_executive.yaml  pr2_upper_body.yaml  pr2_whole_body_controller.yaml  real_boxy_interactive_markers.yaml
controller_specs/: .boxy_upper_body_qp_position_control.yaml.swp  .pr2_upper_body_qp_position_control.yaml.swp  boxy_cart_cart_control.yaml  boxy_cart_joint_control.yaml  boxy_joint_cart_control.yaml  boxy_joint_joint_control.yaml  boxy_upper_body_qp_position_control.yaml  boxy_yaml_control.yaml  iai_pr2_cart_cart_control.yaml  iai_pr2_cart_joint_control.yaml  iai_pr2_upper_body_qp_position_control.yaml  moveabove.yaml  pr2_cart_cart_control.yaml  pr2_cart_joint_control.yaml  pr2_joint_cart_control.yaml  pr2_joint_joint_control.yaml  pr2_joint_position_control.yaml  pr2_left_arm_position_control.yaml  pr2_left_upper_body_qp_position_control.yaml  pr2_pouring_prepose_controller.yaml  pr2_qp_position_control.yaml  pr2_qp_position_control_without_torso.yaml  pr2_upper_body_qp_position_control.yaml  pr2_yaml_control.yaml  real_boxy_cart_cart_control.yaml  real_boxy_cart_joint_control.yaml  real_boxy_joint_cart_control.yaml  real_boxy_joint_joint_control.yaml  real_boxy_yaml_control.yaml  some_boxy_upper_boxy_cart_control.yaml  tiltback.yaml  tiltbottle.yaml
controller_specs/pr2_pouring_example/: pr2_move_above_controller.yaml  pr2_move_above_controller2.yaml  pr2_nice_start_config_control.yaml  pr2_nice_start_config_controller.yaml  pr2_nice_start_config_controller2.yaml  pr2_nice_start_config_controller3.yaml  pr2_nice_start_config_thresholds.yaml  pr2_pouring_prepose_controller.yaml  pr2_tilt_back_controller.yaml  pr2_tilt_back_controller2.yaml  pr2_tilt_back_thresholds.yaml  pr2_tilt_down_controller.yaml  pr2_tilt_down_controller2.yaml  pr2_tilt_down_thresholds.yaml
controller_specs/pr2_pouring_example/hand_tuned_models/: executive_cup_on_table.yaml  executive_left_arm_disabled.yaml  pr2_move_above_thresholds2.yaml  pr2_pouring_executive2.yaml  pr2_tilt_back_controller2.yaml  pr2_tilt_down_controller2.yaml  pr2_tilt_down_thresholds2.yaml
controller_specs/pr2_pouring_example/hand_tuned_models/left_arm_disabled/: move_above_controller.yaml  tilt_back_controller.yaml  tilt_down_controller.yaml
controller_specs/pr2_pouring_example/hand_tuned_models/on_table/: move_above_controller.yaml  tilt_back_controller.yaml  tilt_down_controller.yaml
controller_specs/pr2_pouring_example/hand_tuned_models/tight_constraints/: move_above_controller.yaml  move_above_thresholds.yaml  tilt_back_controller.yaml  tilt_down_controller.yaml
controller_specs/pr2_pouring_example/hand_tuned_models/wide_constraints/: move_above_controller.yaml  tilt_back_controller.yaml  tilt_down_controller.yaml  tilt_down_thresholds.yaml
controller_specs/pr2_pouring_example/learned_models/: executive_cup_on_table.yaml  executive_cup_tight_constraints.yaml  executive_cup_wide_constraints.yaml  executive_left_arm_disabled.yaml
controller_specs/pr2_pouring_example/learned_models/left_arm_disabled/: move_above_controller.yaml  tilt_back_controller.yaml  tilt_down_controller.yaml  tilt_down_thresholds.yaml
controller_specs/pr2_pouring_example/learned_models/on_table/: move_above_controller.yaml  tilt_back_controller.yaml  tilt_down_controller.yaml
controller_specs/pr2_pouring_example/learned_models/tight_constraints/: move_above_controller.yaml  move_above_thresholds.yaml  tilt_back_controller.yaml  (+2 more)
include/giskard_examples/: GiskardControllerNode.hpp  command_utils.hpp  conversions.hpp  ros_utils.hpp  utils.hpp  watchdog.hpp  whole_body_controller.hpp
include/giskard_ros/: GiskardControllerNode.hpp  command_utils.hpp  conversions.hpp  ros_utils.hpp  utils.hpp  watchdog.hpp  whole_body_controller.hpp
launch/: boxy.launch  boxy_gui.launch  boxy_interactive_markers.launch  boxy_test_action_server.launch  boxy_whole_body_controller.launch  pouring_visualization.launch  pr2.launch  pr2_action_sample.launch  pr2_gui.launch  pr2_interactive_markers.launch  pr2_left_arm_loopback_controller.launch  pr2_left_arm_loopback_controller_without_torso.launch  pr2_left_upper_body_cartesian_position_control.launch  pr2_loopback_vel_controllers.launch  pr2_pouring_control.launch  pr2_pouring_executive.launch  pr2_pouring_prepose_control.launch  pr2_test_action_server.launch  pr2_whole_body_controller.launch  real_pr2_vel_controllers.launch  test_joint_state_separator.launch
rosinstall/: catkin.rosinstall
scripts/: cmd_pose1.py  cmd_pose1a.py  cmd_pose2.py  cmd_pose2a.py  cmd_vels.py  plot_trajectory_bag.py  pouring_executive.py  pub_mesh_marker.py  pub_pouring_markers.py  publish_pouring_prepose.py  whole_body_plot.py
src/giskard_examples/: check_controller_yaml.cpp  controller_action_server.cpp  controller_action_test_client.cpp  float_array_separator.cpp  goal_marker_viz.cpp  goal_transformer.cpp  interactive_marker.cpp  joint_state_pretty_printer.cpp  pose_stamped_transformer.cpp  pr2_controller.cpp  pr2_controller_action_server.cpp  single_pose_controller.cpp  whole_body_controller.cpp  whole_body_controller_node.cpp  yaml_controller.cpp  yaml_executive.cpp
src/giskard_ros/: check_controller_yaml.cpp  controller_action_server.cpp  controller_action_test_client.cpp  float_array_separator.cpp  goal_marker_viz.cpp  goal_transformer.cpp  interactive_marker.cpp  joint_state_pretty_printer.cpp  joint_state_separator.cpp  pose_stamped_transformer.cpp  qp_controller_trajectory.cpp  single_pose_controller.cpp  whole_body_controller.cpp  whole_body_controller_node.cpp  yaml_controller.cpp  yaml_executive.cpp
(+72 files in other folders)
