<?xml version="1.0"?>
<package format="2">
  <name>giskard_examples</name>
  <version>0.1.0</version>
  <description>Example use cases for the giskard package</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml_cpp</depend>
  <depend>giskard</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
</package>
