<?xml version="1.0"?>
<package format="2">
  <name>giskard_examples</name>
  <version>0.1.0</version>
  <description>Example use cases for the giskard package</description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelow</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml-cpp</depend>
  <depend>giskard</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>interactive_markers</depend>
  <depend>geometry_msgs</depend>
  <depend>giskard_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kdl_conversions</depend>
</package>
