<?xml version="1.0"?>
<package format="2">
  <name>giskard_ros</name>
  <version>0.0.3</version>
  <description>
    Various ROS nodes that use the giskard library, a framework for
    constraint- and optimization-based robot motion control.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelow</author>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>yaml-cpp</depend>
  <depend>giskard_core</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>roslib</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>giskard_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>kdl_conversions</depend>
</package>
